[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/level/TelaPause.gd" type="Script" id=1]
[ext_resource path="res://imagens/eduquiz/pause.png" type="Texture" id=2]
[ext_resource path="res://scripts/level/timer_label.gd" type="Script" id=6]
[ext_resource path="res://legendas/Roboto-Bold.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=3]
size = 54
font_data = ExtResource( 10 )

[node name="TelaPause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="resume" type="Button" parent="."]
margin_left = 531.0
margin_top = 159.0
margin_right = 988.0
margin_bottom = 266.0

[node name="menu" type="Button" parent="."]
margin_left = 537.0
margin_top = 291.0
margin_right = 994.0
margin_bottom = 398.0

[node name="pause" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 2 )

[node name="timer_label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 115.0
margin_top = 120.0
margin_right = 146.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 3 )
text = "0"
script = ExtResource( 6 )

[connection signal="pressed" from="resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="resume" to="timer_label" method="_on_resume_pressed"]
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
